[package]
name = "libpf-rs"
version = "0.1.1"
edition = "2021"


[dependencies]
anyhow = "1.0.53"
thiserror = "1.0.30"
tempfile = "3.3.0"
libbpf-sys = { version = 0.8.0" }
ctrlc = { version = "3.0", features = ["termination"] }
bincode2 = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
http = "0.2.6"
